--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="p-grid">
+    <div class="p-col-12">
+      <p-megaMenu [model]="items"></p-megaMenu>
+    </div>
+    <div class="p-col-12">
+      <router-outlet></router-outlet>
+    </div>
+</div>
+
