--- a/src/app/components/jogo-dama/components/tabuleiro/tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/tabuleiro/tabuleiro.component.html
@@ -5,7 +5,7 @@
 
       <div class="p-col-12 ">
 
-        <p-panel>
+        <!-- <p-panel> -->
           <!-- <ng-template pTemplate="header">
             <strong style="margin-left: 40%;">Jogo de Dama</strong>
           </ng-template> -->
@@ -34,7 +34,7 @@
 
 
 
-        </p-panel>
+        <!-- </p-panel> -->
       </div>
 
     </div>
