atribuindo cores seleção dois jogadores.

--- a/src/app/components/jogo-dama/components/tabuleiro/peca-tabuleiro/peca-tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/tabuleiro/peca-tabuleiro/peca-tabuleiro.component.html
@@ -7,10 +7,15 @@
 (click)="capturaItem(tabuleiro.pecas[linha][coluna])"
 *ngIf="tabuleiro.pecas[linha][coluna].valor==3 && tabuleiro.pecas[linha][coluna].selecionado == false"
 class="p-button-raised p-button-rounded p-button-danger"></button>
-<button pButton type="button"
 
+<button pButton type="button"
 (click)="capturaItem(tabuleiro.pecas[linha][coluna])"
-*ngIf="tabuleiro.pecas[linha][coluna].selecionado == true"
+*ngIf="tabuleiro.pecas[linha][coluna].selecionado == true && tabuleiro.pecas[linha][coluna].valor==3"
 class="p-button-raised p-button-rounded p-button-help"></button>
+
+<button pButton type="button"
+(click)="capturaItem(tabuleiro.pecas[linha][coluna])"
+*ngIf="tabuleiro.pecas[linha][coluna].selecionado == true && tabuleiro.pecas[linha][coluna].valor==2"
+class="p-button-raised p-button-rounded p-button-warning"></button>
 
 <button pButton type="button" *ngIf="tabuleiro.pecas[linha][coluna].valor==1" (click)="moverItem(tabuleiro.pecas[linha][coluna])" style="opacity: 0;"></button>
