--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right"></p-toast>
 <div class="p-grid">
     <div class="p-col-12">
       <p-megaMenu [model]="items"></p-megaMenu>
