--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/tabuleiro/tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/tabuleiro/tabuleiro.component.html
@@ -1,6 +1,5 @@
 <div class="tabuleiro">
-  <p-table [style]="{height: '500px'}" [value]="linhas" styleClass="p-datatable-gridlines"
-    responsiveLayout="scroll">
+  <p-table [style]="{height: '500px'}" [value]="linhas" styleClass="p-datatable-gridlines" responsiveLayout="scroll">
 
     <ng-template pTemplate="body" let-linha>
       <tr>
