--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
@@ -1,38 +1,40 @@
 <p-megaMenu [model]="items"></p-megaMenu>
 <table style="width: 100%;">
+
   <tr>
-    <td style="width: 8%;">
-      <strong>Jogador 1</strong>
-      <ul style="width: 100%;">
-        <li *ngFor="let item of [1,2,3,4]"> Peça {{ item }}</li>
-      </ul>
-    </td>
-    <td style="width: 2%;">&nbsp;</td>
-    <td style="width: 8%;">
-      <strong>Jogador 2</strong>
-      <ul style="width: 100%;">
-        <li *ngFor="let item of [1,2,3,4]"> Peça {{ item }}</li>
-      </ul>
-    </td>
-    <td style="width: auto;zoom: 90%;">
-      <app-tabuleiro (pecasJogador1CapturadasEvento)="capturaPecasAdversario1($event)"
-        (pecasJogador2CapturadasEvento)="capturaPecasAdversario2($event)"></app-tabuleiro>
+    <td style="width: 10%;text-align: center;">
 
     </td>
-    <td style="width: 20%;">
-      <ul>
-        <li>Jogador 1:
-          <ul>
-            <li>Capturas:0</li>
-          </ul>
-        </li>
-        <li>Jogador 2:
+    <td style="width: auto;">
+      <p-panel>
+        <ng-template  pTemplate="header">
+          <table style="width: 100%;">
+            <tr>
+              <td>Jogador 2: Fulano</td>
+              <td style="width: 33%;"></td>
+              <td>Jogadas: 0</td>
+            </tr>
+          </table>
 
-          <ul>
-            <li>Capturas:0</li>
-          </ul>
-        </li>
-      </ul>
+        </ng-template>
+        <div style="zoom: 90%;">
+          <app-tabuleiro></app-tabuleiro>
+        </div>
+        <ng-template pTemplate="footer">
+          <table style="width: 100%;">
+            <tr>
+              <td>Jogador 1: Fulano</td>
+              <td style="width: 33%;"></td>
+              <td>Jogadas: 0</td>
+            </tr>
+          </table>
+        </ng-template>
+      </p-panel>
+
+    </td>
+    <td style="width: 15%;text-align: center;">
+
     </td>
   </tr>
+
 </table>
