--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
@@ -12,7 +12,7 @@
             <tr>
               <td>Jogador 2: Fulano</td>
               <td style="width: 33%;"></td>
-              <td>Jogadas: 0</td>
+              <td>Jogadas: {{ qtPecasCapturadasJogador2 }}</td>
             </tr>
           </table>
 
@@ -25,7 +25,7 @@
             <tr>
               <td>Jogador 1: Fulano</td>
               <td style="width: 33%;"></td>
-              <td>Jogadas: 0</td>
+              <td>Jogadas: {{ qtPecasCapturadasJogador1 }}</td>
             </tr>
           </table>
         </ng-template>
