--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/tabuleiro/tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/tabuleiro/tabuleiro.component.html
@@ -7,7 +7,7 @@
           [ngClass]="{celulaBranca: !tabuleiro.casas[linha][coluna].ePreto, celulaPreta: tabuleiro.casas[linha][coluna].ePreto}">
 
           <app-peca-tabuleiro [tabuleiro]="tabuleiro" [linha]="linha" [coluna]="coluna"
-            (moverItemEvento)="moverPeca($event)" (selecionarItemEvento)="capturaItem($event)">
+            (moverItemEvento)="moverPeca($event)" (selecionarItemEvento)="selecionarCasa($event)">
           </app-peca-tabuleiro>
         </td>
       </tr>
