Fix validação movimentos.

--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
@@ -17,6 +17,7 @@
               <ng-template #naoEaVezAdversario>
                 <td>Adversário: {{ adversario.nick }}</td>
               </ng-template>
+              <td>Pontos: {{ adversario.pontos }}</td>
               <td style="width: 33%;"></td>
               <td>Jogadas: {{ adversario.jogadas }}</td>
             </tr>
@@ -35,6 +36,7 @@
               <ng-template #naoEaVezDesafiante>
                 <td>Desafiante: {{ desafiante.nick }}</td>
               </ng-template>
+              <td>Pontos: {{ desafiante.pontos }}</td>
               <td style="width: 33%;"></td>
               <td>Jogadas: {{ desafiante.jogadas }}</td>
             </tr>
