--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
@@ -1,5 +1,5 @@
-<p-megaMenu [model]="items"></p-megaMenu>
-<table style="width: 100%;">
+
+<table style="width: 100%;zoom: 75%">
 
   <tr>
     <td style="width: 10%;text-align: center;">
@@ -24,9 +24,7 @@
           </table>
 
         </ng-template>
-        <div style="zoom: 90%;">
-          <app-tabuleiro [jogador]="jogador" [desafiante]="desafiante" [adversario]="adversario"></app-tabuleiro>
-        </div>
+        <app-tabuleiro [jogador]="jogador" [desafiante]="desafiante" [adversario]="adversario"></app-tabuleiro>
         <ng-template pTemplate="footer">
           <table style="width: 100%;">
             <tr>
