--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.scss
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.scss
@@ -12,3 +12,14 @@
   text-align: left;
 }
 
+.rotated {
+  transition: 0.5s;
+  margin-right: 5%;
+  transform: rotate(0deg); /* Equal to rotateZ(45deg) */
+}
+.rotated360 {
+  margin-top: 20%;
+  margin-left: 5%;
+  transition: 0.5s;
+  transform: rotate(-180deg); /* Equal to rotateZ(45deg) */
+}
