--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
@@ -32,7 +32,7 @@
         </div>
 
         <ng-template pTemplate="footer">
-          <table style="width: 100%;">
+          <table class="table" style="width: 100%;">
             <tr>
               <td *ngIf="jogador.valor == desafiante.valor else naoEaVezDesafiante">
               <strong>Desafiante: {{ desafianteJogador.nick }}</strong>
