--- a/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
+++ b/src/app/components/jogo-dama/components/jogo-tabuleiro/jogo-tabuleiro.component.html
@@ -28,7 +28,7 @@
 
         </ng-template>
         <div [ngClass]="{rotated: flagRotacionarFrente,rotated360:flagRotacionarTras}">
-          <app-tabuleiro [jogador]="jogador" [desafiante]="desafiante" [adversario]="adversario"></app-tabuleiro>
+          <app-tabuleiro [tabuleiro]="tabuleiro" [jogador]="jogador" [desafiante]="desafiante" [adversario]="adversario"></app-tabuleiro>
         </div>
 
         <ng-template pTemplate="footer">
